# zzsn-projekt

./: .env.example  .gitignore  Justfile  README.md  flake.nix  main.py  pyproject.toml  skills-lock.json
activation_collection/: cache_activations_runner.py  config.py  dictionary_config.py  dictionary_runner.py  hooked_sd14_pipeline.py
conf/: analyze_autoencoder.yaml  collect_activations.yaml  collect_dictionary.yaml  config.yaml  paths.py  train.yaml
conf/infra/: athena.yaml
docs/: antena.md
docs/dokumentacja-koncowa-zzsn/: dokumentacja-koncowa.md
docs/dokumentacja-wstepna/: dokumentacja-wstepna.md  references.bib
docs/raport-siwy/: raport-siwy.md
docs/spotkania/: 2026-05-19.md  2026-06-02.md
models/: dataset.py  diffusion.py  heatmap.py  linear.py  train_config.py  training.py
models/analysis/: analysis_runner.py  analysis_script_config.py
notebooks/: 01-dataset-from-hf.py  02-training.py  03-dictionary-collection.ipynb  04-debug-intervention.ipynb  04-intervention-demo.ipynb  05-saliency.ipynb  06-create-per-concept-prompts-dataset.ipynb  07-dictionary-dimension-scores.ipynb  08-intervention-in-high-scoring-dimensions.ipynb  09-query-wandb-artifacts.ipynb  10-test-new-intervention.ipynb  11-styles-generation.ipynb  linear.py
scripts/: analyze_autoencoder.py  collect_activations.py  collect_dictionary.py  train.py  upload_activations.py
tests/models/: test_linear.py  test_training.py
